--- a/Ginga.css
+++ b/Ginga.css
@@ -400,8 +400,8 @@ nav ul li:hover > ul { display: block; }
         margin-top: 14rem;
     }
     .basic .row {
-        margin-left: 3.5rem;
-        width: fit-content;
+        margin-left: 0rem;
+        width: 100%;
         
     }
     .basic .row .content {
@@ -409,8 +409,11 @@ nav ul li:hover > ul { display: block; }
         text-align: justify;
         width: fit-content;
     }
-    .basic .row .content p {
+    .basic .row .content h3 {
         font-size: 1.8rem;
+    }
+    .basic .row .content p {
+        font-size: 1.3rem;
     }
     .footer {
         margin-top: 3rem;
@@ -425,8 +428,8 @@ nav ul li:hover > ul { display: block; }
         margin-top: 14rem;
     }
     .basic .row {
-        margin-left: 4.5rem;
-        width: fit-content;     
+        margin-left: 0rem;
+        width: 100%;     
     }
     .basic .row img {
         width: 305px;
@@ -437,6 +440,9 @@ nav ul li:hover > ul { display: block; }
         width: fit-content;
     }
     .basic .row .content p {
+        font-size: 1.3rem;
+    }
+    .basic .row .content h3 {
         font-size: 1.8rem;
     }
     .footer {
@@ -453,8 +459,8 @@ nav ul li:hover > ul { display: block; }
         margin-top: 14rem;
     }
     .basic .row {
-        margin-left: 4.5rem;
-        width: fit-content;     
+        margin-left: 0rem;
+        width: 100%;     
     }
     .basic .row img {
         width: 305px;
@@ -465,6 +471,9 @@ nav ul li:hover > ul { display: block; }
         width: fit-content;
     }
     .basic .row .content p {
+        font-size: 1.3rem;
+    }
+    .basic .row .content h3 {
         font-size: 1.8rem;
     }
     .footer {
@@ -472,6 +481,4 @@ nav ul li:hover > ul { display: block; }
         margin-bottom: 2rem;
         margin-left: 0.5rem;
     }
-
-
 }
