--- a/cords.css
+++ b/cords.css
@@ -602,7 +602,6 @@ nav ul li:hover > ul { display: block; }
         position: absolute;
         left: 0;
         top: 25%;
-	margin-bottom: 7rem;
     }
     .imgContainer .img {
         height:370px;
@@ -693,6 +692,9 @@ nav ul li:hover > ul { display: block; }
     }
     .container a {
         display: none;
+    }
+    .imgContainer .slide_div {
+        margin-bottom: 3rem;
     }
 
 }
