--- a/Movements.css
+++ b/Movements.css
@@ -1,5 +1,5 @@
 body {
-    height: 100vh;
+    height: auto;
     background: url(https://img.freepik.com/free-vector/modern-black-luxury-background-with-hexagon-pattern_87202-1055.jpg?w=826&t=st=1688228535~exp=1688229135~hmac=84aa134d791df910ea49456c9c14c85ab2f1a8f1c395cff026b2e17565f4db14);
     background-repeat: no-repeat;
     background-size: cover;
