--- a/quotes.css
+++ b/quotes.css
@@ -249,3 +249,23 @@ nav ul li:hover > ul { display: block; }
         margin-bottom: 3rem;
     }
 }
+@media (max-width:768px) {
+    .container {
+        margin-top: 13rem;
+    }
+    .grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    
+}
+@media (max-width:425px) {
+    .container {
+        margin-top: 13rem;
+    }
+    .grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .footer .links {
+        display: none;
+    }
+}
