--- a/history.css
+++ b/history.css
@@ -1,45 +1,3 @@
-body {
-    height: auto;
-    background: var(--bg);
-    background-repeat: no-repeat;
-    background-size: cover;
-	background-position: left;
-	background-attachment: fixed;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: 400;
-}
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: 'Times New Roman', Times, serif;
-    list-style: none;
-    text-decoration: none;
-}
-
-:root {
-    --main-color: darkred;
-    --black: rgb(53, 52, 52);
-    --bg: #272727;
-    --border: 0.1rem solid rgba(255, 255, 255, 0.3);
-}
-
-html {
-    overflow-x: hidden;
-    scroll-padding-top: 9rem;
-    scroll-behavior: smooth;
-}
-html::-webkit-scrollbar {
-    width: 0.8rem;
-}
-html::-webkit-scrollbar-track {
-    background: transparent;
-}
-html::-webkit-scrollbar-thumb {
-    background: #fff;
-    border-radius: 5rem;
-}
-
 #section {
     display: grid;
     place-items: center;
@@ -99,6 +57,52 @@ html::-webkit-scrollbar-thumb {
     display: grid;
     place-items: center;
     margin-top: 3rem;
+}
+
+
+
+
+
+body {
+    height: auto;
+    background: var(--bg);
+    background-repeat: no-repeat;
+    background-size: cover;
+	background-position: left;
+	background-attachment: fixed;
+    font-family: 'Times New Roman', Times, serif;
+    font-weight: 400;
+}
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif;
+    list-style: none;
+    text-decoration: none;
+}
+
+:root {
+    --main-color: darkred;
+    --black: rgb(53, 52, 52);
+    --bg: #272727;
+    --border: 0.1rem solid rgba(255, 255, 255, 0.3);
+}
+
+html {
+    overflow-x: hidden;
+    scroll-padding-top: 9rem;
+    scroll-behavior: smooth;
+}
+html::-webkit-scrollbar {
+    width: 0.8rem;
+}
+html::-webkit-scrollbar-track {
+    background: transparent;
+}
+html::-webkit-scrollbar-thumb {
+    background: #fff;
+    border-radius: 5rem;
 }
 
 header {
@@ -283,5 +287,35 @@ p {
         display: none;
     }
 
+}
+@media (max-width:425px) {
+    h1 {
+        font-size: 80px;
+    }
+    .parallax-1 {
+        margin-top: 11rem;
+    }
+    .content {
+        margin-left: -1rem;
+        margin-right: -1rem;
+        margin-top: 0rem;
+        margin-bottom: 0rem;
+    }
+    .book-list {
+        margin-left: 1rem;
+        margin-right: 1rem;
+        margin-bottom: 2rem;
+    }
+    .parallax-inner {
+        padding: 33% 0;
+    }
+    .footer .links {
+        display: none;
+    }
+}
+@media (max-width:320px) {
+    h1 {
+        font-size: 60px;
+    }
 }
 
