--- a/about us try.css
+++ b/about us try.css
@@ -248,6 +248,7 @@ nav ul li:hover > ul { display: block; }
     margin-bottom: 1.5rem;
     text-align: left;
     margin-left: 2rem;
+    text-align: justify;
 }
 .content h2 {
     font-size: 2rem;
@@ -296,4 +297,105 @@ nav ul li:hover > ul { display: block; }
         display: none;
     }
 
+}
+@media (max-width:768px) {
+    .content h1 {
+        font-size: 100px;
+        margin-top: 10rem;
+    }
+    .back-video {
+        bottom: 0%;
+    }
+    #docs {
+        display: grid;
+        place-items: center;
+        margin-top: 3rem;
+    }
+}
+@media (max-width:425px) {
+    .content h1 {
+        font-size: 60px;
+        margin-top: -1.5rem;
+    }
+    .back-video {
+        bottom: 33%;
+    }
+    #docs {
+        display: grid;
+        place-items: center;
+        margin-top: -11rem;
+    }
+    .content h4 {
+        font-size: 1.7rem;
+        margin-top: 1rem;
+    }
+    .content {
+        color: #ccc;
+        margin-top: 1rem;
+        margin-right: 1;
+        margin-bottom: 1.5rem;
+        text-align: left;
+        margin-left: 1rem;
+        text-align: justify;
+    }
+    .content p {
+        margin-top: 0rem;
+        font-size: 1.3rem;
+    }
+}
+@media (max-width: 375px) {
+    .content h1 {
+        font-size: 60px;
+        margin-top: -1.5rem;
+    }
+    .back-video {
+        bottom: 38%;
+    }
+    #docs {
+        display: grid;
+        place-items: center;
+        margin-top: -13rem;
+    }
+    .content h4 {
+        font-size: 1.7rem;
+        margin-top: 1rem;
+    }
+    .content {
+        color: #ccc;
+        margin-top: 1rem;
+        margin-right: 1;
+        margin-bottom: 1.5rem;
+        text-align: left;
+        margin-left: 1rem;
+        text-align: justify;
+    }
+    .content p {
+        margin-top: 0rem;
+        font-size: 1.3rem;
+    }
+    .book-list {
+        margin-left: 1rem;
+        margin-right: 1rem;
+        display: table-column;
+        margin-bottom: 1rem;
+        background: var(--black);
+    }
+}
+@media (max-width: 320px) {
+    .content h1 {
+        font-size: 45px;
+        margin-top: -5rem;
+    }
+    .back-video {
+        bottom: 43%;
+    }
+    .content h4 {
+        font-size: 1.3rem;
+        margin-top: 1rem;
+    }
+    #docs {
+        display: grid;
+        place-items: center;
+        margin-top: -16rem;
+    }
 }
